# spg

./: Makefile  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac  curves.c  curves.h  defs.h  ec_point.c  ec_point.h  ecc.c  ecc.h  help.c  help.h  main.c  spg.c  spg.h  spg_ops.c  spg_ops.h  sym_cipher.c  sym_cipher.h  utils.c  utils.h
tests/: message.txt.orign  message_changed.txt  tests.sh
